2008-11-06  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/snmpconsole/snmp_View.php: Added a span with title over the
	time comp since some people want to know what time something went down.
	This should maybe be moved into a print_ function

	* operation/agentes/estado_generalagente.php: ACL check and style
	changes. Use of new functions

	* include/functions_db.php: dame_numero_datos - added inc and string
	can also filter on agent now. Renamed give_agent_address_from_list to
	get_agent_addresses. get_agent_addresses now returns an array with ips
	Changed give_agent_address to get_agent_address

	* godmode/agentes/manage_config.php,
	godmode/agentes/configurar_agente.php: Renamed functions


2009-11-05  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added sql_error_handler() to show SQL
	errors. Improved SQL error messages in process_sql() so it shows now
	the failing sentence, the file and the line of the call.

	* index.php: Moved load_extensions() call after enterprise
	instalation so enterprise extensions are installed properly.

	* godmode/profiles/profile_list.php: HTML tags nesting fixed.

	* ChangeLog: Fixed previous commit message style.

2008-11-05  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql: Deleted 'id_inventory_server' column from 'tagente'
	  (only needed in enterprise version).

2009-11-05  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/pt_BR.mo, include/languages/fr.po,
	include/languages/uk.mo, include/languages/ro.mo,   
	include/languages/ca.po, include/languages/sv.po,   
	include/languages/de.po, include/languages/zh_TW.po,
	include/languages/hi.po, include/languages/zh_CN.po,
	include/languages/fr.mo, include/languages/te.po,   
	include/languages/eu.po,  include/languages/hu.po,
	include/languages/ca.mo, include/languages/de.mo,   
	include/languages/sv.mo, include/languages/ru.po,   
	include/languages/zh_TW.mo, include/languages/hi.mo,